--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
+  height: auto;
+  overflow-y: hidden;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
